<resources>
    <string name="app_name">QRme</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to QRme!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_id">266920260097058</string>
    <string name="title_activity_main_qr">MainQR</string>
    <string name="scan_to_earn">Scan to Earn</string>
    <string name="refresh_code">Refresh Code</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="terms">Terms</string>
    <string name="howtouse">How to use QRme!</string>
    <string name="current_exchange_rate">Current exchange rate</string>
    <string name="done">Done</string>
    <string name="messages">Messages</string>
    <string name="readings">Redeem</string>
    <string name="authenticating">Authenticating&#8230;</string>
    <string name="select_source">Select Source</string>
    <string name="select_operator">Select Operator</string>
    <string name="select_circle">Select Circle</string>
    <string name="source">Source</string>
    <string name="mobile">Mobile</string>
    <string name="paypal">Paypal</string>
    <string name="amount">Amount</string>
    <string name="send_request">Send Request</string>
    <string name="noInternetMsg">No internet connection Found!</string>
    <string name="fbError">Facebook Error!</string>
    <string name="loginCancelledMsg">Login Cancelled!</string>
    <string name="LoadingMsg">Loading....</string>
    <string name="refCodeMsg">Refreshing QR Code</string>
    <string name="CodeNotRefMsg">Code does not refrehed, please try again</string>
    <string name="inSufBalMsg">Insufficient Balance!</string>
    <string name="errInReqMsg">Error in sending request to server!</string>
    <string name="sndReqMsg">Sending Request</string>
    <string name="reqSentMsg">Request Sent</string>
    <string name="scnSuccMsg">Scanned Successfully!</string>
    <string name="scnOwnCodeMsg">You can\'t scan your own code!</string>
    <string name="alreadyScnMsg">You already scanned this code!</string>
    <string name="scnErrMsg">Error in scanning, Please try again</string>
    <string name="invalidCodeMsg">Not a valid application code</string>
    <string name="sysConfuseMsg">Something went wrong, try again.</string>
    <string name="loading_message">Loading messages&#8230;</string>
    <string name="loading_meetups">Loading meetups&#8230;</string>
    <string name="scanned_result">Your Scan Result</string>
    <string name="recent_meetups">Recent QRMeetUps</string>
    <string name="allow_adds">Allow notification ad</string>
    <string name="allow_posts">Allow post on wall</string>
    <string name="deleteAll">Delete All</string>
    <string name="redeemcash">Redeem Cash!</string>
<string name="howtousetext"><b>1.</b>Login with your facebook account.
\n\n<b>2.</b>Your QR code will be automatically generated.
\n\n<b>3.</b>Scan QR code
\n\t<b>a.</b>You can scan QR code of other user, or show your code to your friend.
\n\t<b>b.</b>The person who scans the QR code will get points per scan.
\n\n<b>4.</b>You can Even Scan QR code or Barcode of any product you find using QRme.
\n\t<b>a.</b>When you scan other QR code or barcode you will gain points but will less!
\n\n<b>5.</b>Your gained points can be redeemed as mobile recharge or cash in paypal.
\n\n<b>6.</b>You can redeemed your cash when your cash count becomes greater than the minimum cashout value.
    
        
        </string>
</resources>