<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:background="@drawable/blackgradiant"
        android:gravity="center_vertical"
        android:paddingLeft="7dp"
        android:paddingRight="7dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/menu_settings"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:typeface="serif" />
        
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/bluebutton"
             android:onClick="gotoMain"
             android:text="@string/done"
             android:textColor="#ffffff" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="43dp"
        android:fadingEdge="none"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/check_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="postOnWall"
                android:paddingLeft="50dp"
                android:text="@string/allow_posts"
                android:textColor="#ffffff"
                android:typeface="serif" />

            <CheckBox
                android:id="@+id/check_adds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check_post"
                android:onClick="showAdds"
                android:paddingLeft="50dp"
                android:text="@string/allow_adds"
                android:textColor="#ffffff"
                android:typeface="serif" />
           
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>