<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:background="@drawable/blackgradiant"
        android:gravity="center_vertical"
        android:paddingLeft="7dp"
        android:paddingRight="7dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/howtouse"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bluebutton"
            android:onClick="gotoMain"
            android:text="@string/done" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="43dp"
        android:fadingEdge="none"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/howtousetext"
                android:textColor="#ffffff"
                android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>
	<LinearLayout
	    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	    android:id="@+id/linear"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:orientation="horizontal" >
	</LinearLayout>
</RelativeLayout>