<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:background="#6ACA00"
        android:gravity="center_vertical"
        android:paddingLeft="7dp"
        android:paddingRight="7dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/messages"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="gotoMain"
            android:text="@string/done" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="43dp"
        android:paddingBottom="50dp" >

        <ListView
            android:id="@+id/listview_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#DDDDDD"
            android:dividerHeight="1dp"
            tools:listitem="@layout/messages_list_item" />

        <LinearLayout
            android:id="@+id/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_message"
                android:textColor="#249DEA"
                android:textSize="27dp" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >
    </LinearLayout>

</RelativeLayout>