<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:background="@drawable/blackgradiant"
        android:gravity="center_vertical"
        android:paddingLeft="7dp"
        android:paddingRight="7dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/scanned_result"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bluebutton"
            android:onClick="gotoMain"
            android:text="@string/done"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/background_gradiant" >

        <TextView
            android:id="@+id/txt_scanned_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_points_earned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_scanned_username"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_total_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_points_earned"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_total_points"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/bluebutton"
            android:onClick="gotoMeetupList"
            android:text="@string/recent_meetups"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:typeface="serif" />

    </RelativeLayout>
    <LinearLayout
	    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	    android:id="@+id/linear"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:orientation="horizontal" >
	</LinearLayout>

</RelativeLayout>